--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           }
         }
       });
-      cloak.run("http://ordercloak.ngrok.io:80");
+      cloak.run("http://localhost:8090");
     });
   </script>
   <link rel="stylesheet" href="/main.css" media="screen" title="no title" charset="utf-8">
