--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Order and Chaos</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  <script src="/lib/socket.io.min.js" charset="utf-8"></script>
+  <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   <script src="/lib/cloak-client.min.js" charset="utf-8"></script>
   <script src="/lib/underscore-min.js" charset="utf-8"></script>
   <script type="text/javascript">
