Fix bug when clearing board
Fix bug when clearing board, that you cannot use cells that have
already been marked the previous time

--- a/site/index.html
+++ b/site/index.html
@@ -37,6 +37,7 @@
     }
 	function clearBoard() {
 		$("table.board td").html("");
+    $("table.board td").removeClass("marked");
 	}
     var userID = "original";
     $(function() {
