--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,7 @@
   <script src="/lib/underscore-min.js" charset="utf-8"></script>
   <script src="/game.js" type="text/javascript"></script>
   <link rel="stylesheet" href="/main.css" media="screen">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 
