--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,6 @@
   <script src="/lib/underscore-min.js" charset="utf-8"></script>
   <script src="/game.js" type="text/javascript"></script>
   <link rel="stylesheet" href="/main.css" media="screen">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 
@@ -19,9 +18,11 @@
       <div class="link">
         <p id="showme">
           Your friend should go to this URL:
-          </p><h2 id="friendlink">Loading...</h2>
+        </p>
+        <h2 id="friendlink">Loading...</h2>
         <p></p>
         <button id="localButton">Play Locally</button>
+        <p id="turn"></p>
 		<button id="clearButton" style="display: none;">Clear board</button>
       </div>
     </div>
